--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "doc": "docs"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "node",
+    "express",
+    "ejs"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RayanSp/the-web-is-for-everyone-interactive-functionality.git"
